@@ -52,7 +52,7 @@ public class BeansConfig {
     final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     final CorsConfiguration config = new CorsConfiguration();
     config.setAllowCredentials(true);
-    config.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:8080"));
+    config.setAllowedOrigins(Arrays.asList("http://localhost:4200", "http://localhost:8080"));
     config.setAllowedHeaders(Arrays.asList(
       HttpHeaders.ORIGIN,
       HttpHeaders.CONTENT_TYPE,
